@@ -1,49 +1,74 @@
 package com.pink.family.assignment.api.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.pink.family.api.rest.server.model.FullPerson;
-import com.pink.family.api.rest.server.model.PersonDetailsRequest;
-import com.pink.family.api.rest.server.model.Relation;
-import com.pink.family.api.rest.server.model.SpecificPersonCheckRequest;
+import com.pink.family.api.rest.client.ApiClient;
+import com.pink.family.api.rest.client.reference.DefaultApi;
+import com.pink.family.api.rest.client.model.ErrorResponse;
+import com.pink.family.api.rest.client.model.FullPerson;
+import com.pink.family.api.rest.client.model.PersonDetailsRequest;
+import com.pink.family.api.rest.client.model.Relation;
+import com.pink.family.api.rest.client.model.SpecificPersonCheckRequest;
 import com.pink.family.assignment.database.dao.PersonDao;
 import com.pink.family.assignment.database.entity.PersonEntity;
 import com.pink.family.assignment.database.entity.enums.RelationshipType;
+import com.pink.family.assignment.database.repository.PersonRelationshipRepository;
+import com.pink.family.assignment.database.repository.PersonRepository;
 import com.pink.family.assignment.service.PersonService;
+import jakarta.persistence.EntityManager;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.TestMethodOrder;
+import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.api.parallel.ExecutionMode;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.web.server.LocalServerPort;
+import org.springframework.cache.CacheManager;
 import org.springframework.http.MediaType;
-import org.springframework.test.annotation.DirtiesContext;
+import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.client.RestClientResponseException;
 
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.fail;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.hamcrest.Matchers.is;
 
 import java.time.LocalDate;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Random;
 import java.util.Set;
+import java.util.concurrent.ThreadLocalRandom;
 import java.util.stream.Collectors;
+import java.util.stream.LongStream;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @Slf4j
-@SpringBootTest
+@SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @AutoConfigureMockMvc
 @Transactional
-@DirtiesContext(classMode = DirtiesContext.ClassMode.AFTER_EACH_TEST_METHOD)
-
+@Execution(ExecutionMode.SAME_THREAD)
+@TestMethodOrder(MethodOrderer.MethodName.class)
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
 class PersonControllerTests {
+
+
+    @LocalServerPort
+    private int port;
 
     @Autowired
     private MockMvc mockMvc;
@@ -54,67 +79,109 @@ class PersonControllerTests {
     @Autowired
     private ObjectMapper objectMapper;
 
+    private ApiClient apiClient;
+    private DefaultApi api;
+    @Autowired
+    private CacheManager cacheManager;
+
+    @Autowired
+    JdbcTemplate jdbcTemplate;
+
+    @Autowired
+    PersonRelationshipRepository personRelationshipRepository;
+
+    @Autowired
+    PersonRepository personRepository;
+
+    @Autowired
+    EntityManager entityManager;
+
+    @Transactional(propagation = Propagation.NOT_SUPPORTED)
     @BeforeEach
     void setUp() {
-        personDao.deleteAll(); // reset database between tests
+
+
+
+        apiClient = new ApiClient();
+        apiClient.setBasePath("http://localhost:" + port);
+        api = new DefaultApi(apiClient);
+
+        cacheManager.getCacheNames()
+            .forEach(name -> cacheManager.getCache(name).clear());
+
+
+        personRelationshipRepository.deleteAll();
+        personRepository.deleteAll();
+        entityManager.flush();
     }
 
     @Nested
     class CheckExistingPerson {
+
+
         @Test
         @DisplayName("Should return 444 when multiple people match name and DOB")
         void shouldReturn444_WhenMultiplePeopleMatchNameAndDob() throws Exception {
+            // Setup: create multiple people with same name and DOB
             personDao.save(PersonEntity.builder()
                 .name("Alex")
-                .externalId(111L)
+                .externalId(getId())
                 .dateOfBirth(LocalDate.of(1990, 1, 1))
                 .build());
 
             personDao.save(PersonEntity.builder()
                 .name("Alex")
-                .externalId(222L)
+                .externalId(getId())
                 .dateOfBirth(LocalDate.of(1990, 1, 1))
                 .build());
 
-            SpecificPersonCheckRequest request = new SpecificPersonCheckRequest()
-                .requestId("RQ_MULTIPLE")
-                .name("Alex")
-                .dateOfBirth(LocalDate.of(1990, 1, 1));
+            // Request using name + DOB that matches both above
 
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().is(444))
-                .andExpect(jsonPath("$.code", is("444")))
-                .andExpect(jsonPath("$.message", is(PersonService.Constants.ErrorMsg.NO_DISTINCT_RECORD)))
-                .andExpect(jsonPath("$.requestId", is("RQ_MULTIPLE")));
+            try {
+                var response
+                    = api.v1PeopleCheckExistingPersonPostWithHttpInfo(
+                    new SpecificPersonCheckRequest()
+                        .requestId("RQ_MULTIPLE")
+                        .name("Alex")
+                        .dateOfBirth(LocalDate.of(1990, 1, 1)));
+                fail("Expected failure");
+            } catch (RestClientResponseException e) {
+                assertEquals(444, e.getStatusCode().value());
+                ErrorResponse error = e.getResponseBodyAs(ErrorResponse.class);
+                assert error != null;
+                assertEquals("444", error.getCode());
+                assertEquals(PersonService.Constants.ErrorMsg.NO_DISTINCT_RECORD, error.getMessage());
+                assertEquals("RQ_MULTIPLE", error.getRequestId());
+            }
         }
+
 
         @Test
         @DisplayName("Should return 444 when only some children are shared with the partner")
         void shouldReturn444_WhenNotAllChildrenAreSharedWithPartner() throws Exception {
+
+            Long mainId = getId();
             PersonEntity main = personDao.save(PersonEntity.builder()
                 .name("SharedDad")
-                .externalId(321L)
+                .externalId(mainId)
                 .dateOfBirth(LocalDate.of(1985, 5, 5))
                 .build());
 
             PersonEntity partner1 = personDao.save(PersonEntity.builder()
                 .name("Mom1")
-                .externalId(654L)
+                .externalId(getId())
                 .dateOfBirth(LocalDate.of(1985, 6, 6))
                 .build());
 
             PersonEntity partner2 = personDao.save(PersonEntity.builder()
                 .name("Mom2")
-                .externalId(987L)
+                .externalId(getId())
                 .dateOfBirth(LocalDate.of(1986, 7, 7))
                 .build());
 
             PersonEntity child1 = personDao.save(createChild("Kid1", LocalDate.of(2010, 1, 1)));
             PersonEntity child2 = personDao.save(createChild("Kid2", LocalDate.of(2011, 1, 1)));
             PersonEntity child3 = personDao.save(createChild("Kid3", LocalDate.of(2012, 1, 1)));
-
 
             // All children linked to main
             main.addRelationship(child1, RelationshipType.PARENT, RelationshipType.CHILD);
@@ -137,16 +204,20 @@ class PersonControllerTests {
             SpecificPersonCheckRequest request = new SpecificPersonCheckRequest()
                 .requestId("RQ_NOT_SHARED")
                 .name("SharedDad")
-                .id(321L)
+                .id(mainId)
                 .dateOfBirth(LocalDate.of(1985, 5, 5));
 
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().is(444))
-                .andExpect(jsonPath("$.code", is("444")))
-                .andExpect(jsonPath("$.message", is(PersonService.Constants.ErrorMsg.NO_SHARED_CHILDREN)))
-                .andExpect(jsonPath("$.requestId", is("RQ_NOT_SHARED")));
+            try {
+                api.v1PeopleCheckExistingPersonPostWithHttpInfo(request);
+                fail("Expected failure");
+            } catch (RestClientResponseException e) {
+                assertEquals(444, e.getStatusCode().value());
+                ErrorResponse error = e.getResponseBodyAs(ErrorResponse.class);
+                assert error != null;
+                assertEquals("444", error.getCode());
+                assertEquals(PersonService.Constants.ErrorMsg.NO_SHARED_CHILDREN, error.getMessage());
+                assertEquals("RQ_NOT_SHARED", error.getRequestId());
+            }
         }
 
 
@@ -157,7 +228,7 @@ class PersonControllerTests {
             PersonEntity existing = personDao.save(
                 PersonEntity.builder()
                     .name("NoIDPerson")
-                    .externalId(888777666L)
+                    .externalId(getId())
                     .dateOfBirth(LocalDate.of(1990, 6, 15))
                     .build()
             );
@@ -166,7 +237,7 @@ class PersonControllerTests {
             PersonEntity partner = personDao.save(
                 PersonEntity.builder()
                     .name("Partner")
-                    .externalId(999888777L)
+                    .externalId(getId())
                     .dateOfBirth(LocalDate.of(1991, 7, 16))
                     .build()
             );
@@ -174,7 +245,6 @@ class PersonControllerTests {
             PersonEntity child1 = personDao.save(createChild("Child1", LocalDate.of(2010, 1, 1)));
             PersonEntity child2 = personDao.save(createChild("Child2", LocalDate.of(2011, 2, 2)));
             PersonEntity child3 = personDao.save(createChild("AdultChild3", LocalDate.now().minusYears(10)));
-
 
             existing.addRelationship(partner, RelationshipType.PARTNER, RelationshipType.PARTNER);
             existing.addRelationship(child1, RelationshipType.PARENT, RelationshipType.CHILD);
@@ -194,41 +264,41 @@ class PersonControllerTests {
                 .name("NoIDPerson")
                 .dateOfBirth(LocalDate.of(1990, 6, 15));
 
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk());
+            // Using the Swagger-generated client
+            var response = api.v1PeopleCheckExistingPersonPostWithHttpInfo(request);
+            assertEquals(200, response.getStatusCode().value());
         }
 
 
         @Test
         @DisplayName("Should return 200 when a person has a partner and exactly 3 children with the same partner")
         void shouldReturn200_WhenPartnerAnd3ChildrenExist() throws Exception {
+
+            Long mainId =getId();
+            // Setup (same as before)
             PersonEntity main = PersonEntity.builder()
                 .name("John")
-                .externalId(123456789L)
+                .externalId(mainId)
                 .dateOfBirth(LocalDate.of(1990, 5, 20))
                 .build();
 
+           Long partnerId = getId();
             PersonEntity partner = PersonEntity.builder()
                 .name("Jane")
-                .externalId(987654321L)
+                .externalId(partnerId)
                 .dateOfBirth(LocalDate.of(1988, 3, 15))
                 .build();
 
             PersonEntity child1 = createChild("Child1", LocalDate.of(2010, 1, 1));
             PersonEntity child2 = createChild("Child2", LocalDate.of(2012, 2, 2));
-            // make sure the child is under 18
             PersonEntity child3 = createChild("Child3", LocalDate.of(LocalDate.now().getYear() - 10, 3, 3));
 
-            // Save all first to get IDs assigned
             main = personDao.save(main);
             partner = personDao.save(partner);
             child1 = personDao.save(child1);
             child2 = personDao.save(child2);
             child3 = personDao.save(child3);
 
-            // Add relationships after IDs are assigned
             main.addRelationship(partner, RelationshipType.PARTNER, RelationshipType.PARTNER);
             main.addRelationship(child1, RelationshipType.PARENT, RelationshipType.CHILD);
             main.addRelationship(child2, RelationshipType.PARENT, RelationshipType.CHILD);
@@ -238,39 +308,38 @@ class PersonControllerTests {
             partner.addRelationship(child2, RelationshipType.PARENT, RelationshipType.CHILD);
             partner.addRelationship(child3, RelationshipType.PARENT, RelationshipType.CHILD);
 
-            log.info("SAVING ALL TEST DATA");
-            // Save all entities again to persist the relationships
             personDao.saveAndFlush(main);
             personDao.saveAndFlush(partner);
             personDao.saveAndFlush(child1);
             personDao.saveAndFlush(child2);
             personDao.saveAndFlush(child3);
 
-            // Prepare API request object
             SpecificPersonCheckRequest request = new SpecificPersonCheckRequest()
                 .requestId("RQ123")
                 .name("Jane")
-                .id(123456789L)
+                .id(mainId)
                 .dateOfBirth(LocalDate.of(1990, 5, 20));
 
-            // Perform POST request and expect 200 OK
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk());
+            var response = api.v1PeopleCheckExistingPersonPostWithHttpInfo(request);
+            assertEquals(200, response.getStatusCode().value());
         }
+
 
         @Test
         @DisplayName("Should return 444 when person has more than 3 children with partner")
         void shouldReturn444_WhenMoreThan3ChildrenExist() throws Exception {
+
+            Long mainId = getId();
             PersonEntity main = PersonEntity.builder()
                 .name("Anna")
-                .externalId(111222333L)
+                .externalId(mainId)
                 .dateOfBirth(LocalDate.of(1985, 7, 15))
                 .build();
+
+            Long partnerId = getId();
             PersonEntity partner = PersonEntity.builder()
                 .name("Mark")
-                .externalId(444555666L)
+                .externalId(partnerId)
                 .dateOfBirth(LocalDate.of(1984, 6, 10))
                 .build();
             main = personDao.save(main);
@@ -298,34 +367,44 @@ class PersonControllerTests {
             SpecificPersonCheckRequest request = new SpecificPersonCheckRequest()
                 .requestId("RQ999")
                 .name("Anna")
-                .id(111222333L)
+                .id(mainId)
                 .dateOfBirth(LocalDate.of(1985, 7, 15));
 
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().is(444))
-                .andExpect(jsonPath("$.code", is("444")))
-                .andExpect(jsonPath("$.message", is(PersonService.Constants.ErrorMsg.NOT_EXACTLY_3_CHILDREN)))
-                .andExpect(jsonPath("$.requestId", is("RQ999")));
+            try {
+                api.v1PeopleCheckExistingPersonPostWithHttpInfo(request);
+                fail("Expected failure");
+            } catch (RestClientResponseException e) {
+                assertEquals(444, e.getStatusCode().value());
+                ErrorResponse error = objectMapper.readValue(e.getResponseBodyAsString(), ErrorResponse.class);
+                assertEquals("444", error.getCode());
+                assertEquals(PersonService.Constants.ErrorMsg.NOT_EXACTLY_3_CHILDREN, error.getMessage());
+                assertEquals("RQ999", error.getRequestId());
+            }
         }
+
 
         @Test
         @DisplayName("Should return 444 when children have different partners")
         void shouldReturn444_WhenChildrenHaveDifferentPartners() throws Exception {
+
+            Long mainId = getId();
             PersonEntity main = PersonEntity.builder()
                 .name("Emma")
-                .externalId(222333444L)
+                .externalId(mainId)
                 .dateOfBirth(LocalDate.of(1987, 8, 20))
                 .build();
+
+            Long partnerId = getId();
             PersonEntity partner1 = PersonEntity.builder()
                 .name("Liam")
-                .externalId(555666777L)
+                .externalId(partnerId)
                 .dateOfBirth(LocalDate.of(1986, 7, 10))
                 .build();
+
+            Long partnerId2 = getId();
             PersonEntity partner2 = PersonEntity.builder()
                 .name("Noah")
-                .externalId(888999000L)
+                .externalId(partnerId2)
                 .dateOfBirth(LocalDate.of(1985, 5, 5))
                 .build();
 
@@ -342,7 +421,6 @@ class PersonControllerTests {
             main.addRelationship(child2, RelationshipType.PARENT, RelationshipType.CHILD);
             main.addRelationship(child3, RelationshipType.PARENT, RelationshipType.CHILD);
 
-            // Different partners for children
             partner1.addRelationship(child1, RelationshipType.PARENT, RelationshipType.CHILD);
             partner2.addRelationship(child2, RelationshipType.PARENT, RelationshipType.CHILD);
             partner1.addRelationship(child3, RelationshipType.PARENT, RelationshipType.CHILD);
@@ -354,30 +432,34 @@ class PersonControllerTests {
             SpecificPersonCheckRequest request = new SpecificPersonCheckRequest()
                 .requestId("RQ888")
                 .name("Emma")
-                .id(222333444L)
+                .id(mainId)
                 .dateOfBirth(LocalDate.of(1987, 8, 20));
 
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().is(444))
-                .andExpect(jsonPath("$.code", is("444")))
-                .andExpect(jsonPath("$.message", is(PersonService.Constants.ErrorMsg.NO_SHARED_CHILDREN)))
-                .andExpect(jsonPath("$.requestId", is("RQ888")));
+            try {
+                api.v1PeopleCheckExistingPersonPostWithHttpInfo(request);
+                fail("Expected failure");
+            } catch (RestClientResponseException e) {
+                assertEquals(444, e.getStatusCode().value());
+                ErrorResponse error = objectMapper.readValue(e.getResponseBodyAsString(), ErrorResponse.class);
+                assertEquals("444", error.getCode());
+                assertEquals(PersonService.Constants.ErrorMsg.NO_SHARED_CHILDREN, error.getMessage());
+                assertEquals("RQ888", error.getRequestId());
+            }
         }
 
 
         @Test
         @DisplayName("Should return 444 when none of the children are under 18")
         void shouldReturn444_WhenChildrenAreAllAdults() throws Exception {
+            Long mainId = getId();
             PersonEntity main = PersonEntity.builder()
                 .name("Oliver")
-                .externalId(333444555L)
+                .externalId(mainId)
                 .dateOfBirth(LocalDate.of(1980, 9, 30))
                 .build();
             PersonEntity partner = PersonEntity.builder()
                 .name("Sophia")
-                .externalId(666777888L)
+                .externalId(getId())
                 .dateOfBirth(LocalDate.of(1982, 10, 25))
                 .build();
 
@@ -403,31 +485,35 @@ class PersonControllerTests {
             SpecificPersonCheckRequest request = new SpecificPersonCheckRequest()
                 .requestId("RQ777")
                 .name("Oliver")
-                .id(333444555L)
+                .id(mainId)
                 .dateOfBirth(LocalDate.of(1980, 9, 30));
 
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().is(444))
-                .andExpect(jsonPath("$.code", is("444")))
-                .andExpect(jsonPath("$.message", is(PersonService.Constants.ErrorMsg.NO_UNDERAGE_CHILD)))
-                .andExpect(jsonPath("$.requestId", is("RQ777")));
+            try {
+                api.v1PeopleCheckExistingPersonPostWithHttpInfo(request);
+                fail("Expected failure");
+            } catch (RestClientResponseException e) {
+                assertEquals(444, e.getStatusCode().value());
+                ErrorResponse error = objectMapper.readValue(e.getResponseBodyAsString(), ErrorResponse.class);
+                assertEquals("444", error.getCode());
+                assertEquals(PersonService.Constants.ErrorMsg.NO_UNDERAGE_CHILD, error.getMessage());
+                assertEquals("RQ777", error.getRequestId());
+            }
         }
-
 
         @Test
         @DisplayName("Should return 200 when no external id but name, surname, and DOB match")
         void shouldReturn200_WhenNoExternalIdButNameSurnameDobMatch() throws Exception {
+            Long mainId = getId();
             PersonEntity main = PersonEntity.builder()
                 .name("Lucas")
-                .externalId(444555666L)
+                .externalId(mainId)
                 .dateOfBirth(LocalDate.of(1992, 11, 11))
                 .build();
 
+            Long partnerId = getId();
             PersonEntity partner = PersonEntity.builder()
                 .name("Mia")
-                .externalId(777888999L)
+                .externalId(partnerId)
                 .dateOfBirth(LocalDate.of(1990, 12, 12))
                 .build();
 
@@ -455,24 +541,25 @@ class PersonControllerTests {
                 .name("Lucas")
                 .dateOfBirth(LocalDate.of(1992, 11, 11));
 
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk());
+            var response = api.v1PeopleCheckExistingPersonPostWithHttpInfo(request);
+            assertEquals(200, response.getStatusCode().value());
         }
+
 
         @Test
         @DisplayName("Should return 444 when children are not linked to main person but only to partner")
         void shouldReturn444_WhenChildrenOnlyLinkedToPartner() throws Exception {
+            Long mainId = getId();
             PersonEntity main = personDao.save(PersonEntity.builder()
                 .name("IsolatedParent")
-                .externalId(123L)
+                .externalId(mainId)
                 .dateOfBirth(LocalDate.of(1980, 1, 1))
                 .build());
 
+            Long partnerId = getId();
             PersonEntity partner = personDao.save(PersonEntity.builder()
                 .name("EngagedParent")
-                .externalId(456L)
+                .externalId(partnerId)
                 .dateOfBirth(LocalDate.of(1980, 2, 2))
                 .build());
 
@@ -499,62 +586,43 @@ class PersonControllerTests {
             SpecificPersonCheckRequest request = new SpecificPersonCheckRequest()
                 .requestId("RQ_CHILDREN_NOT_MINE")
                 .name("IsolatedParent")
-                .id(123L)
+                .id(mainId)
                 .dateOfBirth(LocalDate.of(1980, 1, 1));
 
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().is(444))
-                .andExpect(jsonPath("$.code", is("444")))
-                .andExpect(jsonPath("$.message", is(PersonService.Constants.ErrorMsg.NO_SHARED_CHILDREN)))
-                .andExpect(jsonPath("$.requestId", is("RQ_CHILDREN_NOT_MINE")));
+            try {
+                api.v1PeopleCheckExistingPersonPostWithHttpInfo(request);
+                fail("Expected failure");
+            } catch (RestClientResponseException e) {
+                assertEquals(444, e.getStatusCode().value());
+                ErrorResponse error = objectMapper.readValue(e.getResponseBodyAsString(), ErrorResponse.class);
+                assertEquals("444", error.getCode());
+                assertEquals(PersonService.Constants.ErrorMsg.NO_SHARED_CHILDREN, error.getMessage());
+                assertEquals("RQ_CHILDREN_NOT_MINE", error.getRequestId());
+            }
         }
 
-        @Test
-        @DisplayName("Should return 400 when malformed JSON is sent")
-        void shouldReturn400_WhenMalformedJson() throws Exception {
-            String badJson = "{ \"requestId\": \"RQ_BAD\", \"name\": \"Oops\", "; // truncated JSON
-
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(badJson))
-                .andExpect(status().isBadRequest());
-        }
-
-        @Test
-        @DisplayName("Should return 400 when name is missing all values")
-        void shouldReturn400_WhenNameMissing() throws Exception {
-            String request = """
-                    {
-                        "requestId": "RQ_MISSING",
-                        "id": ,
-                        "dateOfBirth": ""
-                    }
-                """;
-
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(request))
-                .andExpect(status().isBadRequest());
-        }
 
         @Test
         @DisplayName("Should return 444 when no matching person is found")
         void shouldReturn444_WhenNoMatchFound() throws Exception {
+
+            Long mainId = getId();
             SpecificPersonCheckRequest request = new SpecificPersonCheckRequest()
                 .requestId("RQ_NO_MATCH")
-                .id(999999999L)
+                .id(mainId)
                 .name("Ghost")
                 .dateOfBirth(LocalDate.of(1900, 1, 1));
 
-            mockMvc.perform(post("/v1/people/check-existing-person")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().is(444))
-                .andExpect(jsonPath("$.code", is("444")))
-                .andExpect(jsonPath("$.message", is(PersonService.Constants.ErrorMsg.NO_RECORD)))
-                .andExpect(jsonPath("$.requestId", is("RQ_NO_MATCH")));
+            try {
+                api.v1PeopleCheckExistingPersonPostWithHttpInfo(request);
+                fail("Expected failure");
+            } catch (RestClientResponseException e) {
+                assertEquals(444, e.getStatusCode().value());
+                ErrorResponse error = objectMapper.readValue(e.getResponseBodyAsString(), ErrorResponse.class);
+                assertEquals("444", error.getCode());
+                assertEquals(PersonService.Constants.ErrorMsg.NO_RECORD, error.getMessage());
+                assertEquals("RQ_NO_MATCH", error.getRequestId());
+            }
         }
     }
 
@@ -565,11 +633,11 @@ class PersonControllerTests {
         @DisplayName("Should successfully update person with parent, partner, child and return full relationship details")
         void testV1PeoplePost_WithValidData_AllExist_AndFullDetailsReturned() throws Exception {
 
-            Long mainId = 100L;
-            Long parent1Id = 1L;
-            Long parent2Id = 2L;
-            Long partnerId = 3L;
-            Long childId = 4L;
+            Long mainId = getId();
+            Long parent1Id = getId();
+            Long parent2Id = getId();
+            Long partnerId = getId();
+            Long childId = getId();
 
             personDao.save(PersonEntity.builder()
                 .externalId(parent1Id).name("Parent One").dateOfBirth(LocalDate.of(1960, 1, 1)).build());
@@ -582,14 +650,14 @@ class PersonControllerTests {
             personDao.save(PersonEntity.builder()
                 .externalId(mainId).name("Main").build());
 
-            var request = new PersonDetailsRequest()
+            var request = new com.pink.family.api.rest.server.model.PersonDetailsRequest()
                 .id(mainId)
                 .name("Main Updated")
                 .birthDate(LocalDate.of(1990, 5, 20))
-                .parent1(new Relation().id(parent1Id))
-                .parent2(new Relation().id(parent2Id))
-                .partner(new Relation().id(partnerId))
-                .addChildrenItem(new Relation().id(childId));
+                .parent1(new com.pink.family.api.rest.server.model.Relation().id(parent1Id))
+                .parent2(new com.pink.family.api.rest.server.model.Relation().id(parent2Id))
+                .partner(new com.pink.family.api.rest.server.model.Relation().id(partnerId))
+                .addChildrenItem(new com.pink.family.api.rest.server.model.Relation().id(childId));
 
             var result = mockMvc.perform(post("/v1/people")
                     .contentType(MediaType.APPLICATION_JSON)
@@ -623,7 +691,9 @@ class PersonControllerTests {
 
             // Validate returned DTO as object
             String json = result.getResponse().getContentAsString();
-            FullPerson person = objectMapper.readValue(json, FullPerson.class);
+            com.pink.family.api.rest.server.model.FullPerson person = objectMapper.readValue(json,
+                com.pink.family.api.rest.server.model.FullPerson.class
+            );
 
             assertThat(person.getId()).isEqualTo(mainId);
             assertThat(person.getName()).isEqualTo("Main Updated");
@@ -644,10 +714,10 @@ class PersonControllerTests {
         @Test
         @DisplayName("Should update person with partial relationships: one parent, no partner, multiple children")
         void testV1PeoplePost_PartialRelationships() throws Exception {
-            Long mainId = 300L;
-            Long parent1Id = 10L;
-            Long child1Id = 20L;
-            Long child2Id = 21L;
+            Long mainId = getId();
+            Long parent1Id = getId();
+            Long child1Id = getId();
+            Long child2Id = getId();
 
             // Save related entities in DB
             personDao.save(PersonEntity.builder()
@@ -659,15 +729,15 @@ class PersonControllerTests {
             personDao.save(PersonEntity.builder()
                 .externalId(mainId).name("Original Name").dateOfBirth(LocalDate.of(1985, 3, 3)).build());
 
-            var request = new PersonDetailsRequest()
+            var request = new com.pink.family.api.rest.server.model.PersonDetailsRequest()
                 .id(mainId)
                 .name("Updated Name")
                 .birthDate(LocalDate.of(1990, 1, 1))
-                .parent1(new Relation().id(parent1Id))
+                .parent1(new com.pink.family.api.rest.server.model.Relation().id(parent1Id))
                 // No parent2 provided
                 // No partner provided
-                .addChildrenItem(new Relation().id(child1Id))
-                .addChildrenItem(new Relation().id(child2Id));
+                .addChildrenItem(new com.pink.family.api.rest.server.model.Relation().id(child1Id))
+                .addChildrenItem(new com.pink.family.api.rest.server.model.Relation().id(child2Id));
 
             var result = mockMvc.perform(post("/v1/people")
                     .contentType(MediaType.APPLICATION_JSON)
@@ -699,174 +769,147 @@ class PersonControllerTests {
         }
 
         @Test
+        @Transactional
         @DisplayName("Should keep existing relationships if no relations are sent in update")
-        void testUpdatePerson_NoRelationsSent_ExistingRelationsNotCleared() throws Exception {
+        void testUpdatePerson_NoRelationsSent_ExistingRelationsNotCleared() {
+            Long mainId = getId();
+            Long parentId = getId();
+            Long partnerId = getId();
+            Long childId = getId();
 
-            Long mainId = 100L;
-            Long parentId = 1L;
-            Long partnerId = 2L;
-            Long childId = 3L;
-
-            // Save related persons
             personDao.save(PersonEntity.builder().externalId(parentId).name("Existing Parent").build());
             personDao.save(PersonEntity.builder().externalId(partnerId).name("Existing Partner").build());
             personDao.save(PersonEntity.builder().externalId(childId).name("Existing Child").build());
 
-            // Save main person with existing relationships
             PersonEntity mainPerson = PersonEntity.builder()
                 .externalId(mainId)
                 .name("Main Person")
                 .build();
 
-            PersonEntity parent = personDao.findByExternalId(parentId).iterator().next();
-            PersonEntity partner = personDao.findByExternalId(partnerId).iterator().next();
-            PersonEntity child = personDao.findByExternalId(childId).iterator().next();
+            PersonEntity parent = personDao.findByExternalIdEntity(parentId).get();
+            PersonEntity partner = personDao.findByExternalIdEntity(partnerId).get();
+            PersonEntity child = personDao.findByExternalIdEntity(childId).get();
 
             personDao.saveAll(List.of(mainPerson, parent, partner, child));
 
             mainPerson.addRelationship(parent, RelationshipType.CHILD, RelationshipType.PARENT);
             mainPerson.addRelationship(partner, RelationshipType.PARTNER, RelationshipType.PARTNER);
             mainPerson.addRelationship(child, RelationshipType.PARENT, RelationshipType.CHILD);
-
             personDao.save(mainPerson);
 
-            // Prepare update request WITHOUT any relations (empty sets)
             var request = new PersonDetailsRequest()
                 .id(mainId)
-                .name("Main Updated")                 // Change name to trigger update
+                .name("Main Updated")
                 .birthDate(LocalDate.of(1990, 1, 1))
                 .parent1(null)
                 .parent2(null)
                 .partner(null)
-                .children(null);                     // No relationships sent
+                .children(null);
 
-            var result = mockMvc.perform(post("/v1/people")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andReturn();
+            FullPerson response = api.v1PeoplePostWithHttpInfo(request).getBody();
 
-            // Reload main person from DB
-            var saved = personDao.findByExternalId(mainId).stream().findFirst();
-            assertThat(saved).isPresent();
+            assert response != null;
+            assertThat(response.getId()).isEqualTo(mainId);
+            assertThat(response.getName()).isEqualTo("Main Updated");
+            assertThat(response.getBirthDate()).isEqualTo(LocalDate.of(1990, 1, 1));
 
-            PersonEntity updatedPerson = saved.get();
+            var updated = personDao.findAll().stream().filter(e -> Objects.equals(e.getExternalId(), mainId))
+                .findFirst();
+            assertThat(updated).isPresent();
+            PersonEntity updatedPerson = updated.get();
 
-            // Name and DOB should be updated
-            assertThat(updatedPerson.getName()).isEqualTo("Main Updated");
-            assertThat(updatedPerson.getDateOfBirth()).isEqualTo(LocalDate.of(1990, 1, 1));
-
-            // Relationships should NOT be cleared — should still have 3 relations
-            assertThat(updatedPerson.getRelationships()).isNotEmpty();
-            assertThat(updatedPerson.getRelationships().size()).isEqualTo(3);
-
-            // Check related external IDs still present
+            assertThat(updatedPerson.getRelationships()).hasSize(3);
             Set<Long> relatedIds = updatedPerson.getRelationships().stream()
-                .map(rel -> rel.getRelatedPerson().getExternalId())
+                .map(r -> r.getRelatedPerson().getExternalId())
                 .collect(Collectors.toSet());
 
             assertThat(relatedIds).containsExactlyInAnyOrder(parentId, partnerId, childId);
         }
 
         @Test
+        @Transactional
         @DisplayName("Should add new relationships and keep existing relationships not mentioned in update")
-        void testUpdatePerson_PartialRelationsSent_ExistingRelationsRetained() throws Exception {
+        void testUpdatePerson_PartialRelationsSent_ExistingRelationsRetained() {
+            Long mainId = getId();
+            Long existingParentId = getId();
+            Long existingPartnerId = getId();
+            Long existingChildId = getId();
+            Long newPartnerId = getId();
 
-            Long mainId = 100L;
-            Long existingParentId = 1L;
-            Long existingPartnerId = 2L;
-            Long existingChildId = 3L;
-
-            Long newPartnerId = 4L;  // New partner to add
-
-            // Save persons
             personDao.save(PersonEntity.builder().externalId(existingParentId).name("Existing Parent").build());
             personDao.save(PersonEntity.builder().externalId(existingPartnerId).name("Existing Partner").build());
             personDao.save(PersonEntity.builder().externalId(existingChildId).name("Existing Child").build());
             personDao.save(PersonEntity.builder().externalId(newPartnerId).name("New Partner").build());
 
-            // Save main person with existing relationships
             PersonEntity mainPerson = personDao.save(PersonEntity.builder()
                 .externalId(mainId)
                 .name("Main Person")
                 .build());
 
-            PersonEntity existingParent = personDao.findByExternalId(existingParentId).iterator().next();
-            PersonEntity existingPartner = personDao.findByExternalId(existingPartnerId).iterator().next();
-            PersonEntity existingChild = personDao.findByExternalId(existingChildId).iterator().next();
+            PersonEntity parent = personDao.findByExternalIdEntity(existingParentId).get();
+            PersonEntity partner = personDao.findByExternalIdEntity(existingPartnerId).get();
+            PersonEntity child = personDao.findByExternalIdEntity(existingChildId).get();
 
-            mainPerson.addRelationship(existingParent, RelationshipType.CHILD, RelationshipType.PARENT);
-            mainPerson.addRelationship(existingPartner, RelationshipType.PARTNER, RelationshipType.PARTNER);
-            mainPerson.addRelationship(existingChild, RelationshipType.PARENT, RelationshipType.CHILD);
-
+            mainPerson.addRelationship(parent, RelationshipType.CHILD, RelationshipType.PARENT);
+            mainPerson.addRelationship(partner, RelationshipType.PARTNER, RelationshipType.PARTNER);
+            mainPerson.addRelationship(child, RelationshipType.PARENT, RelationshipType.CHILD);
             personDao.save(mainPerson);
 
-            // Prepare update request with only new partner relationship (no parents or children)
             var request = new PersonDetailsRequest()
                 .id(mainId)
                 .name("Main Updated")
                 .birthDate(LocalDate.of(1990, 1, 1))
-                .partner(new Relation().id(newPartnerId));  // Add new partner only
+                .partner(new Relation().id(newPartnerId));
 
-            var result = mockMvc.perform(post("/v1/people")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andReturn();
+            FullPerson response = api.v1PeoplePostWithHttpInfo(request).getBody();
 
-            // Reload main person from DB
-            var savedOpt = personDao.findByExternalId(mainId).stream().findFirst();
-            assertThat(savedOpt).isPresent();
+            assertThat(response.getId()).isEqualTo(mainId);
+            assertThat(response.getName()).isEqualTo("Main Updated");
 
-            PersonEntity updatedPerson = savedOpt.get();
+            var updated = personDao.findByExternalIdEntity(mainId).stream().findFirst();
+            assertThat(updated).isPresent();
+            PersonEntity updatedPerson = updated.get();
 
-            // Name and DOB updated
-            assertThat(updatedPerson.getName()).isEqualTo("Main Updated");
-            assertThat(updatedPerson.getDateOfBirth()).isEqualTo(LocalDate.of(1990, 1, 1));
-
-            // Relationships count should now be 4 (existing 3 + new 1)
             assertThat(updatedPerson.getRelationships()).hasSize(4);
-
-            // Related IDs should include existing and new partner
             Set<Long> relatedIds = updatedPerson.getRelationships().stream()
-                .map(rel -> rel.getRelatedPerson().getExternalId())
+                .map(r -> r.getRelatedPerson().getExternalId())
                 .collect(Collectors.toSet());
 
-            assertThat(relatedIds).contains(existingParentId, existingPartnerId, existingChildId, newPartnerId);
+            assertThat(relatedIds).containsExactlyInAnyOrder(existingParentId,
+                existingPartnerId,
+                existingChildId,
+                newPartnerId
+            );
         }
 
         @Test
+        @Transactional
         @DisplayName("Should update person details without modifying existing relationships when same relations are sent")
         void testUpdatePerson_DetailsUpdated_NoRelationChange() throws Exception {
+            Long mainId = getId();
+            Long parentId = getId();
+            Long partnerId = getId();
+            Long childId = getId();
 
-            Long mainId = 100L;
-            Long parentId = 1L;
-            Long partnerId = 2L;
-            Long childId = 3L;
-
-            // Save related persons
             personDao.save(PersonEntity.builder().externalId(parentId).name("Parent").build());
             personDao.save(PersonEntity.builder().externalId(partnerId).name("Partner").build());
             personDao.save(PersonEntity.builder().externalId(childId).name("Child").build());
 
-            // Save main person with existing relations
             PersonEntity mainPerson = personDao.save(PersonEntity.builder()
                 .externalId(mainId)
                 .name("Original Name")
                 .dateOfBirth(LocalDate.of(1980, 1, 1))
                 .build());
 
-            PersonEntity parent = personDao.findByExternalId(parentId).iterator().next();
-            PersonEntity partner = personDao.findByExternalId(partnerId).iterator().next();
-            PersonEntity child = personDao.findByExternalId(childId).iterator().next();
+            PersonEntity parent = personDao.findByExternalIdEntity(parentId).get();
+            PersonEntity partner = personDao.findByExternalIdEntity(partnerId).get();
+            PersonEntity child = personDao.findByExternalIdEntity(childId).get();
 
             mainPerson.addRelationship(parent, RelationshipType.CHILD, RelationshipType.PARENT);
             mainPerson.addRelationship(partner, RelationshipType.PARTNER, RelationshipType.PARTNER);
             mainPerson.addRelationship(child, RelationshipType.PARENT, RelationshipType.CHILD);
-
             personDao.save(mainPerson);
 
-            // Prepare update request with same relationships
             var request = new PersonDetailsRequest()
                 .id(mainId)
                 .name("Updated Name")
@@ -875,63 +918,50 @@ class PersonControllerTests {
                 .partner(new Relation().id(partnerId))
                 .addChildrenItem(new Relation().id(childId));
 
-            var result = mockMvc.perform(post("/v1/people")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andReturn();
+            FullPerson response = api.v1PeoplePostWithHttpInfo(request).getBody();
 
-            // Reload main person from DB
-            var savedOpt = personDao.findByExternalId(mainId).stream().findFirst();
-            assertThat(savedOpt).isPresent();
+            assertThat(response.getId()).isEqualTo(mainId);
+            assertThat(response.getName()).isEqualTo("Updated Name");
 
-            PersonEntity updatedPerson = savedOpt.get();
+            var updated = personDao.findAll().stream().filter(e -> Objects.equals(e.getExternalId(), mainId))
+                .findFirst();
 
-            // Name and DOB updated
-            assertThat(updatedPerson.getName()).isEqualTo("Updated Name");
-            assertThat(updatedPerson.getDateOfBirth()).isEqualTo(LocalDate.of(1990, 2, 2));
+            PersonEntity updatedPerson = updated.get();
 
-            // Relationships count should remain unchanged (3)
             assertThat(updatedPerson.getRelationships()).hasSize(3);
-
-            // Confirm relationships are the same external IDs
             Set<Long> relatedIds = updatedPerson.getRelationships().stream()
-                .map(rel -> rel.getRelatedPerson().getExternalId())
+                .map(r -> r.getRelatedPerson().getExternalId())
                 .collect(Collectors.toSet());
 
             assertThat(relatedIds).containsExactlyInAnyOrder(parentId, partnerId, childId);
         }
 
         @Test
+        @Transactional
         @DisplayName("Should add new relationships without removing existing ones")
         void testAddNewRelationships_PreservesExisting() throws Exception {
+            Long mainId = getId();
+            Long existingParentId = getId();
+            Long existingPartnerId = getId();
+            Long newChildId = getId();
 
-            Long mainId = 100L;
-            Long existingParentId = 1L;
-            Long existingPartnerId = 2L;
-            Long newChildId = 5L;    // New child to be added
-
-            // Save related persons
             personDao.save(PersonEntity.builder().externalId(existingParentId).name("Existing Parent").build());
             personDao.save(PersonEntity.builder().externalId(existingPartnerId).name("Existing Partner").build());
             personDao.save(PersonEntity.builder().externalId(newChildId).name("New Child").build());
 
-            // Save main person with existing parent and partner
             PersonEntity mainPerson = personDao.save(PersonEntity.builder()
                 .externalId(mainId)
                 .name("Original Name")
                 .dateOfBirth(LocalDate.of(1980, 1, 1))
                 .build());
 
-            PersonEntity existingParent = personDao.findByExternalId(existingParentId).iterator().next();
-            PersonEntity existingPartner = personDao.findByExternalId(existingPartnerId).iterator().next();
+            PersonEntity parent = personDao.findByExternalIdEntity(existingParentId).get();
+            PersonEntity partner = personDao.findByExternalIdEntity(existingPartnerId).get();
 
-            mainPerson.addRelationship(existingParent, RelationshipType.CHILD, RelationshipType.PARENT);
-            mainPerson.addRelationship(existingPartner, RelationshipType.PARTNER, RelationshipType.PARTNER);
-
+            mainPerson.addRelationship(parent, RelationshipType.CHILD, RelationshipType.PARENT);
+            mainPerson.addRelationship(partner, RelationshipType.PARTNER, RelationshipType.PARTNER);
             personDao.save(mainPerson);
 
-            // Prepare request adding a new child relationship (existing relationships remain)
             var request = new PersonDetailsRequest()
                 .id(mainId)
                 .name("Updated Name")
@@ -940,106 +970,87 @@ class PersonControllerTests {
                 .partner(new Relation().id(existingPartnerId))
                 .addChildrenItem(new Relation().id(newChildId));
 
-            var result = mockMvc.perform(post("/v1/people")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andReturn();
+            FullPerson response = api.v1PeoplePostWithHttpInfo(request).getBody();
 
-            var savedOpt = personDao.findByExternalId(mainId).stream().findFirst();
-            assertThat(savedOpt).isPresent();
+            assertThat(response.getId()).isEqualTo(mainId);
+            assertThat(response.getName()).isEqualTo("Updated Name");
 
-            PersonEntity updatedPerson = savedOpt.get();
+            var updated = personDao.findAll().stream().filter(e -> Objects.equals(e.getExternalId(), mainId))
+                .findFirst();
 
-            // Verify updated name and birthDate
-            assertThat(updatedPerson.getName()).isEqualTo("Updated Name");
-            assertThat(updatedPerson.getDateOfBirth()).isEqualTo(LocalDate.of(1990, 2, 2));
+            PersonEntity updatedPerson = updated.get();
 
-            // Relationships count is now 3 (existing parent, existing partner, new child)
             assertThat(updatedPerson.getRelationships()).hasSize(3);
-
             Set<Long> relatedIds = updatedPerson.getRelationships().stream()
-                .map(rel -> rel.getRelatedPerson().getExternalId())
+                .map(r -> r.getRelatedPerson().getExternalId())
                 .collect(Collectors.toSet());
 
             assertThat(relatedIds).containsExactlyInAnyOrder(existingParentId, existingPartnerId, newChildId);
         }
 
         @Test
+        @Transactional
         @DisplayName("Should preserve existing relationships when null or empty relation sets are passed")
         void testUpdateWithNullOrEmptyRelations_PreservesExistingRelationships() throws Exception {
+            Long mainId = getId();;
+            Long parentId = getId();
+            Long partnerId = getId();
+            Long childId = getId();
 
-            Long mainId = 100L;
-            Long parentId = 1L;
-            Long partnerId = 2L;
-            Long childId = 3L;
-
-            // Save related persons
             personDao.save(PersonEntity.builder().externalId(parentId).name("Parent").build());
             personDao.save(PersonEntity.builder().externalId(partnerId).name("Partner").build());
             personDao.save(PersonEntity.builder().externalId(childId).name("Child").build());
 
-            // Save main person with relationships
             PersonEntity mainPerson = personDao.save(PersonEntity.builder()
                 .externalId(mainId)
                 .name("Original Name")
                 .dateOfBirth(LocalDate.of(1980, 1, 1))
                 .build());
 
-            PersonEntity parent = personDao.findByExternalId(parentId).iterator().next();
-            PersonEntity partner = personDao.findByExternalId(partnerId).iterator().next();
-            PersonEntity child = personDao.findByExternalId(childId).iterator().next();
+            PersonEntity parent = personDao.findByExternalIdEntity(parentId).get();
+            PersonEntity partner = personDao.findByExternalIdEntity(partnerId).get();
+            PersonEntity child = personDao.findByExternalIdEntity(childId).get();
 
             mainPerson.addRelationship(parent, RelationshipType.CHILD, RelationshipType.PARENT);
             mainPerson.addRelationship(partner, RelationshipType.PARTNER, RelationshipType.PARTNER);
             mainPerson.addRelationship(child, RelationshipType.PARENT, RelationshipType.CHILD);
-
             personDao.save(mainPerson);
 
-            // Prepare request with null or empty relationship sets
             var request = new PersonDetailsRequest()
                 .id(mainId)
                 .name("Updated Name")
                 .birthDate(LocalDate.of(1990, 2, 2))
-                .parent1(null)   // null parent1
-                .parent2(null)   // null parent2
-                .partner(null)   // null partner
-                .children(Collections.emptyList()); // empty children list
+                .parent1(null)
+                .parent2(null)
+                .partner(null)
+                .children(Collections.emptyList());
 
-            var result = mockMvc.perform(post("/v1/people")
-                    .contentType(MediaType.APPLICATION_JSON)
-                    .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andReturn();
+            FullPerson response = api.v1PeoplePostWithHttpInfo(request).getBody();
 
-            // Verify DB relationships are still intact
-            var savedOpt = personDao.findByExternalId(mainId).stream().findFirst();
-            assertThat(savedOpt).isPresent();
+            assertThat(response.getId()).isEqualTo(mainId);
+            assertThat(response.getName()).isEqualTo("Updated Name");
 
-            PersonEntity updatedPerson = savedOpt.get();
+            var updated = personDao.findAll().stream().filter(e -> Objects.equals(e.getExternalId(), mainId))
+                .findFirst();
 
-            // Relationships count remains 3
+            PersonEntity updatedPerson = updated.get();
+
             assertThat(updatedPerson.getRelationships()).hasSize(3);
-
             Set<Long> relatedIds = updatedPerson.getRelationships().stream()
-                .map(rel -> rel.getRelatedPerson().getExternalId())
+                .map(r -> r.getRelatedPerson().getExternalId())
                 .collect(Collectors.toSet());
 
             assertThat(relatedIds).containsExactlyInAnyOrder(parentId, partnerId, childId);
-
-            // Check updated name and DOB are persisted
-            assertThat(updatedPerson.getName()).isEqualTo("Updated Name");
-            assertThat(updatedPerson.getDateOfBirth()).isEqualTo(LocalDate.of(1990, 2, 2));
         }
 
         @Test
         @DisplayName("Should create new person when externalId does not exist and relationships are provided")
         void testCreateNewPersonWhenExternalIdNotFound() throws Exception {
 
-            Long mainId = 999L; // Not in DB
-            Long parentId = 1L;
-            Long partnerId = 2L;
-            Long childId = 3L;
+            Long mainId = getId(); // Not in DB
+            Long parentId = getId();
+            Long partnerId =getId();
+            Long childId = getId();
 
             // Save related persons only
             personDao.save(PersonEntity.builder().externalId(parentId).name("Parent").build());
@@ -1067,32 +1078,32 @@ class PersonControllerTests {
                 .andExpect(jsonPath("$.children[0].id").value(childId))
                 .andReturn();
 
-            // Verify DB entry created with relationships
-            var savedOpt = personDao.findByExternalId(mainId).stream().findFirst();
-            assertThat(savedOpt).isPresent();
+            // Verify from response object instead of DB query
+            String json = result.getResponse().getContentAsString();
+            FullPerson person = objectMapper.readValue(json, FullPerson.class);
 
-            PersonEntity savedPerson = savedOpt.get();
-
-            assertThat(savedPerson.getName()).isEqualTo("New Person");
-            assertThat(savedPerson.getDateOfBirth()).isEqualTo(LocalDate.of(2000, 1, 1));
-
-            Set<Long> relatedIds = savedPerson.getRelationships().stream()
-                .map(rel -> rel.getRelatedPerson().getExternalId())
-                .collect(Collectors.toSet());
-
-            assertThat(relatedIds).containsExactlyInAnyOrder(parentId, partnerId, childId);
+            assertThat(person.getId()).isEqualTo(mainId);
+            assertThat(person.getName()).isEqualTo("New Person");
+            assertThat(person.getBirthDate()).isEqualTo(LocalDate.of(2000, 1, 1));
+            assertThat(person.getParent1()).isNotNull();
+            assertThat(person.getParent1().getId()).isEqualTo(parentId);
+            assertThat(person.getPartner()).isNotNull();
+            assertThat(person.getPartner().getId()).isEqualTo(partnerId);
+            assertThat(person.getChildren()).hasSize(1);
+            assertThat(person.getChildren().get(0).getId()).isEqualTo(childId);
         }
+
 
         @Test
         @DisplayName("Should create all persons if none of the IDs exist")
         void testV1PeoplePost_WithAllMissingIds_ShouldStillPass() throws Exception {
 
             // IDs that are NOT yet in the DB
-            Long mainId = 200L;
-            Long parent1Id = 201L;
-            Long parent2Id = 202L;
-            Long partnerId = 203L;
-            Long childId = 204L;
+            Long mainId = getId();
+            Long parent1Id = getId();
+            Long parent2Id = getId();;
+            Long partnerId = getId();;
+            Long childId = getId();;
 
             var request = new PersonDetailsRequest()
                 .id(mainId)
@@ -1122,24 +1133,23 @@ class PersonControllerTests {
 
             assertThat(person.getId()).isEqualTo(mainId);
             assertThat(person.getName()).isEqualTo("AutoCreated Main");
+            assert person.getParent1() != null;
             assertThat(person.getParent1().getId()).isEqualTo(parent1Id);
+            assert person.getParent2() != null;
             assertThat(person.getParent2().getId()).isEqualTo(parent2Id);
+            assert person.getPartner() != null;
             assertThat(person.getPartner().getId()).isEqualTo(partnerId);
             assertThat(person.getChildren()).hasSize(1);
-            assertThat(person.getChildren().get(0).getId()).isEqualTo(childId);
+            assertThat(person.getChildren().getFirst().getId()).isEqualTo(childId);
 
-            assertThat(personDao.findByExternalId(mainId)).isNotEmpty();
-            assertThat(personDao.findByExternalId(parent1Id)).isNotEmpty();
-            assertThat(personDao.findByExternalId(parent2Id)).isNotEmpty();
-            assertThat(personDao.findByExternalId(partnerId)).isNotEmpty();
-            assertThat(personDao.findByExternalId(childId)).isNotEmpty();
+            assertThat(personDao.findAll()).hasSize(5);
         }
 
         @Test
         @DisplayName("Should update only name and DOB when no relationships provided")
         void testV1PeoplePost_UpdateBasicInfoOnly() throws Exception {
 
-            Long mainId = 300L;
+            Long mainId = getId();;
 
             // Save initial person with no relationships
             personDao.save(PersonEntity.builder()
@@ -1167,12 +1177,199 @@ class PersonControllerTests {
                 .andReturn();
 
             // Verify persisted entity has updated info
-            var updatedPerson = personDao.findByExternalId(mainId).stream().findFirst();
+            var updatedPerson = personDao.findByExternalIdEntity(mainId).stream().findFirst();
             assertThat(updatedPerson).isPresent();
             assertThat(updatedPerson.get().getName()).isEqualTo("Updated Name");
             assertThat(updatedPerson.get().getDateOfBirth()).isEqualTo(LocalDate.of(1995, 3, 15));
             assertThat(updatedPerson.get().getRelationships()).isEmpty(); // Ensure no new relationships
         }
+
+        @Test
+        @DisplayName("Should delete valid persons and ignore non-existent ones")
+        void testDeleteMixedValidAndInvalidIds() throws Exception {
+            Long validId = getId();
+            Long invalidId = getId();
+
+            personDao.save(PersonEntity.builder()
+                .externalId(validId)
+                .name("Valid Person")
+                .dateOfBirth(LocalDate.of(1995, 1, 1))
+                .deleted(false)
+                .build());
+
+            mockMvc.perform(delete("/v1/people")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(List.of(validId, invalidId))))
+                .andExpect(status().isNoContent());
+
+            PersonEntity fetched = personDao.findByExternalIdEntity(validId).get();
+            assertThat(fetched.isDeleted()).isTrue();
+        }
+
+        @Test
+        @DisplayName("Should handle duplicate IDs in request gracefully")
+        void testDeleteWithDuplicateIdsInRequest() throws Exception {
+            Long externalId = getId();
+
+            personDao.save(PersonEntity.builder()
+                .externalId(externalId)
+                .name("Duplicate Target")
+                .dateOfBirth(LocalDate.of(1985, 2, 2))
+                .deleted(false)
+                .build());
+
+            mockMvc.perform(delete("/v1/people")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(List.of(externalId, externalId, externalId))))
+                .andExpect(status().isNoContent());
+
+            PersonEntity fetched = personDao.findByExternalIdEntity(externalId).get();
+            assertThat(fetched.isDeleted()).isTrue();
+        }
+
+        @Test
+        @DisplayName("Should handle large batch delete")
+        void testDeleteLargeBatch() throws Exception {
+            List<Long> ids = LongStream.rangeClosed(7000, 7050)
+                .boxed()
+                .collect(Collectors.toList());
+
+            List<PersonEntity> people = ids.stream()
+                .map(id -> PersonEntity.builder()
+                    .externalId(id)
+                    .name("Bulk Person " + id)
+                    .dateOfBirth(LocalDate.of(1990, 1, 1))
+                    .deleted(false)
+                    .build())
+                .toList();
+
+            personDao.saveAll(people);
+
+            mockMvc.perform(delete("/v1/people")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(ids)))
+                .andExpect(status().isNoContent());
+
+            for (Long id : ids) {
+                PersonEntity person = personDao.findByExternalIdEntity(id).get();
+                assertThat(person.isDeleted()).isTrue();
+            }
+        }
+
+
+    }
+
+    @Nested
+    class Delete {
+        @Test
+        @DisplayName("Should mark people as blacklisted when DELETE is called")
+        void testDeleteApiMarksBlacklisted() throws Exception {
+            Long externalId = getId();
+            PersonEntity person = PersonEntity.builder()
+                .externalId(externalId)
+                .name("Mark Me")
+                .dateOfBirth(LocalDate.of(1990, 1, 1))
+                .build();
+
+            personDao.save(person);
+
+            mockMvc.perform(delete("/v1/people")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(List.of(externalId))))
+                .andExpect(status().isNoContent());
+
+            PersonEntity updated = personDao.findByExternalIdEntity(externalId).get();
+            assertThat(updated.isDeleted()).isTrue();
+        }
+
+        @Test
+        @DisplayName("Should ignore blacklisted person ID in POST /v1/people")
+        void testPostIgnoresBlacklistedPerson() throws Exception {
+            Long externalId = getId();
+
+            PersonEntity blacklisted = PersonEntity.builder()
+                .externalId(externalId)
+                .name("Blacklisted User")
+                .dateOfBirth(LocalDate.of(1985, 5, 5))
+                .deleted(true)
+                .build();
+
+            personDao.save(blacklisted);
+
+            var request = new PersonDetailsRequest()
+                .id(externalId)
+                .name("Should Not Be Processed")
+                .birthDate(LocalDate.of(1990, 1, 1));
+
+            mockMvc.perform(post("/v1/people")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isOk()) // or another status depending on your API logic
+                .andExpect(jsonPath("$.id").doesNotExist());
+
+            // Confirm it did not update the blacklisted entity
+            PersonEntity fetched = personDao.findByExternalIdEntity(externalId).get();
+            assertThat(fetched.getName()).isEqualTo("Blacklisted User");
+        }
+
+        @Test
+        @DisplayName("Should not fail when blacklisting the same person twice")
+        void testBlacklistIdempotency() throws Exception {
+            Long externalId =getId();
+
+            PersonEntity person = PersonEntity.builder()
+                .externalId(externalId)
+                .name("Already Blacklisted")
+                .dateOfBirth(LocalDate.of(1990, 1, 1))
+                .deleted(true)
+                .build();
+
+            personDao.save(person);
+
+            mockMvc.perform(delete("/v1/people")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(List.of(externalId))))
+                .andExpect(status().isNoContent());
+
+            PersonEntity fetched = personDao.findByExternalIdEntity(externalId).get();
+            assertThat(fetched.isDeleted()).isTrue();
+        }
+
+        @Test
+        @DisplayName("Should mark multiple people as deleted")
+        void testDeleteMultiplePeople() throws Exception {
+            Long id1 = getId();
+            Long id2 = getId();
+
+            personDao.saveAll(List.of(
+                PersonEntity.builder().externalId(id1).name("Person 1").dateOfBirth(LocalDate.of(1990, 1, 1))
+                    .deleted(false).build(),
+                PersonEntity.builder().externalId(id2).name("Person 2").dateOfBirth(LocalDate.of(1991, 2, 2))
+                    .deleted(false).build()
+            ));
+
+            mockMvc.perform(delete("/v1/people")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(List.of(id1, id2))))
+                .andExpect(status().isNoContent());
+
+            assertThat(personDao.findByExternalIdEntity(id1).orElseThrow().isDeleted()).isTrue();
+            assertThat(personDao.findByExternalIdEntity(id2).orElseThrow().isDeleted()).isTrue();
+        }
+
+        @Test
+        @DisplayName("Should silently ignore non-existent IDs")
+        void testDeleteIgnoresMissingIds() throws Exception {
+            Long nonExistentId =getId();
+
+            mockMvc.perform(delete("/v1/people")
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(List.of(nonExistentId))))
+                .andExpect(status().isNoContent());
+
+            assertThat(personDao.findByExternalIdEntity(nonExistentId)).isEmpty();
+        }
+
 
     }
 
@@ -1182,5 +1379,9 @@ class PersonControllerTests {
             .externalId(new Random().nextLong())
             .dateOfBirth(dob)
             .build();
+    }
+
+    private Long getId() {
+        return  ThreadLocalRandom.current().nextInt(1000) + System.nanoTime() % 100000;
     }
 }
